@@ -818,11 +818,10 @@ order)@footnote{On HPUX @command{fort77} is the @acronym{POSIX}
 compliant FORTRAN compiler, and comes second in the search list.}, and
 then for @command{f2c}, and use whichever is found first; if none is
 found, @R{} cannot be compiled.  The search mechanism can be changed
-using the @option{--with-g77}, @option{--with-f77}, and
-@option{--with-f2c} command line options to @command{configure}.  If
-your FORTRAN compiler is in a non-standard location, you should set the
-environment variable @env{PATH} accordingly before running
-@command{configure}.
+using the @option{--with-f77} and @option{--with-f2c} command line
+options to @command{configure}.  If your FORTRAN compiler is in a
+non-standard location, you should set the environment variable
+@env{PATH} accordingly before running @command{configure}.
 
 If your FORTRAN libraries are in slightly peculiar places, you should
 also look at @env{LD_LIBRARY_PATH} or your system's equivalent to make
